--- a/views/includes/lobbyinstance.pug
+++ b/views/includes/lobbyinstance.pug
@@ -1,14 +1,18 @@
-div(class='card bg-light' style="w-100")
-  div(class='card-body py-3')
-    div(class='row')
-      div(class='col-1 border-right')
-        div(class='d-flex justify-content-around')
-          h5 000
-      div(class='col-8')
-        div(class='d-flex justify-content-start')
-          h5 Player name
-      div(class='col-3')
-        div(class='d-flex justify-content-around')
-          a(href='/game') Join
-          a(href='/game') View
-  div(class='card-footer text-muted small text-right py-1') Created 5 minutes ago.
+each lobby in lobbies
+  div(class='card bg-light' style="w-100")
+    div(class='card-body py-3')
+      div(class='row')
+        div(class='col-1 border-right')
+          div(class='d-flex justify-content-around')
+            h5 !{lobby.gid}
+        div(class='col-8')
+          div(class='d-flex justify-content-start')
+            if lobby.title
+              h5 !{lobby.title}
+            else
+              h5 Player !{lobby.uid_1}'s Game
+        div(class='col-3')
+          div(class='d-flex justify-content-around')
+            a(href='/game') Join
+            a(href='/game') View
+    div(class='card-footer text-muted small text-right py-1') Created 5 minutes ago.
